third_party/move/move-compiler-v2/tests/visibility-checker/v1-typing/module_call_visibility_friend_invalid.exp

Diagnostics:
error: function `0x2::X::f_private` cannot be called from function `0x2::M::f_friend_call_private_1` because it is private to module `0x2::X`
   ┌─ tests/visibility-checker/v1-typing/module_call_visibility_friend_invalid.move:4:9
   │
 4 │     fun f_private() {}
   │         ^^^^^^^^^ callee
   ·
22 │     public(friend) fun f_friend_call_private_1() { X::f_private() }
   │                                                    -------------- called here

error: function `0x2::X::f_friend` cannot be called from function `0x2::M::f_friend_call_friend` because module `0x2::M` is not a `friend` of `0x2::X`
   ┌─ tests/visibility-checker/v1-typing/module_call_visibility_friend_invalid.move:5:24
   │
 5 │     public(friend) fun f_friend() {}
   │                        ^^^^^^^^ callee
   ·
18 │     public(friend) fun f_friend_call_friend() { X::f_friend() }
   │                                                 ------------- called here

error: function `0x2::Y::f_private` cannot be called from function `0x2::M::f_friend_call_private_2` because it is private to module `0x2::Y`
   ┌─ tests/visibility-checker/v1-typing/module_call_visibility_friend_invalid.move:10:9
   │
10 │     fun f_private() {}
   │         ^^^^^^^^^ callee
   ·
23 │     public(friend) fun f_friend_call_private_2() { Y::f_private() }
   │                                                    -------------- called here
